@@ -1,5 +1,13 @@
 package com.bss.inc.cameraon.utils;
 
+/**
+ * Pure Java Windows Registry access.
+ * Modified by petrucio@stackoverflow(828681) to add support for
+ * reading (and writing but not creating/deleting keys) the 32-bits
+ * registry view from a 64-bits JVM (KEY_WOW64_32KEY)
+ * and 64-bits view from a 32-bits JVM (KEY_WOW64_64KEY).
+ *****************************************************************************/
+
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.HashMap;
@@ -15,62 +23,50 @@ public class WinRegistry {
     public static final int REG_NOTFOUND = 2;
     public static final int REG_ACCESSDENIED = 5;
 
+    public static final int KEY_WOW64_32KEY = 0x0200;
+    public static final int KEY_WOW64_64KEY = 0x0100;
+
     private static final int KEY_ALL_ACCESS = 0xf003f;
     private static final int KEY_READ = 0x20019;
-    private static final Preferences userRoot = Preferences.userRoot();
-    private static final Preferences systemRoot = Preferences.systemRoot();
-    private static final Class<? extends Preferences> userClass = userRoot.getClass();
-    private static final Method regOpenKey;
-    private static final Method regCloseKey;
-    private static final Method regQueryValueEx;
-    private static final Method regEnumValue;
-    private static final Method regQueryInfoKey;
-    private static final Method regEnumKeyEx;
-    private static final Method regCreateKeyEx;
-    private static final Method regSetValueEx;
-    private static final Method regDeleteKey;
-    private static final Method regDeleteValue;
+    private static Preferences userRoot = Preferences.userRoot();
+    private static Preferences systemRoot = Preferences.systemRoot();
+    private static Class<? extends Preferences> userClass = userRoot.getClass();
+    private static Method regOpenKey = null;
+    private static Method regCloseKey = null;
+    private static Method regQueryValueEx = null;
+    private static Method regEnumValue = null;
+    private static Method regQueryInfoKey = null;
+    private static Method regEnumKeyEx = null;
+    private static Method regCreateKeyEx = null;
+    private static Method regSetValueEx = null;
+    private static Method regDeleteKey = null;
+    private static Method regDeleteValue = null;
 
     static {
         try {
-            regOpenKey = userClass.getDeclaredMethod("WindowsRegOpenKey",
-                    new Class[] { int.class, byte[].class, int.class });
+            regOpenKey     = userClass.getDeclaredMethod("WindowsRegOpenKey",     new Class[] { int.class, byte[].class, int.class });
             regOpenKey.setAccessible(true);
-            regCloseKey = userClass.getDeclaredMethod("WindowsRegCloseKey",
-                    new Class[] { int.class });
+            regCloseKey    = userClass.getDeclaredMethod("WindowsRegCloseKey",    new Class[] { int.class });
             regCloseKey.setAccessible(true);
-            regQueryValueEx = userClass.getDeclaredMethod("WindowsRegQueryValueEx",
-                    new Class[] { int.class, byte[].class });
+            regQueryValueEx= userClass.getDeclaredMethod("WindowsRegQueryValueEx",new Class[] { int.class, byte[].class });
             regQueryValueEx.setAccessible(true);
-            regEnumValue = userClass.getDeclaredMethod("WindowsRegEnumValue",
-                    new Class[] { int.class, int.class, int.class });
+            regEnumValue   = userClass.getDeclaredMethod("WindowsRegEnumValue",   new Class[] { int.class, int.class, int.class });
             regEnumValue.setAccessible(true);
-            regQueryInfoKey = userClass.getDeclaredMethod("WindowsRegQueryInfoKey1",
-                    new Class[] { int.class });
+            regQueryInfoKey=userClass.getDeclaredMethod("WindowsRegQueryInfoKey1",new Class[] { int.class });
             regQueryInfoKey.setAccessible(true);
-            regEnumKeyEx = userClass.getDeclaredMethod(
-                    "WindowsRegEnumKeyEx", new Class[] { int.class, int.class,
-                            int.class });
+            regEnumKeyEx   = userClass.getDeclaredMethod("WindowsRegEnumKeyEx",   new Class[] { int.class, int.class, int.class });
             regEnumKeyEx.setAccessible(true);
-            regCreateKeyEx = userClass.getDeclaredMethod(
-                    "WindowsRegCreateKeyEx", new Class[] { int.class,
-                            byte[].class });
+            regCreateKeyEx = userClass.getDeclaredMethod("WindowsRegCreateKeyEx", new Class[] { int.class, byte[].class });
             regCreateKeyEx.setAccessible(true);
-            regSetValueEx = userClass.getDeclaredMethod(
-                    "WindowsRegSetValueEx", new Class[] { int.class,
-                            byte[].class, byte[].class });
+            regSetValueEx  = userClass.getDeclaredMethod("WindowsRegSetValueEx",  new Class[] { int.class, byte[].class, byte[].class });
             regSetValueEx.setAccessible(true);
-            regDeleteValue = userClass.getDeclaredMethod(
-                    "WindowsRegDeleteValue", new Class[] { int.class,
-                            byte[].class });
+            regDeleteValue = userClass.getDeclaredMethod("WindowsRegDeleteValue", new Class[] { int.class, byte[].class });
             regDeleteValue.setAccessible(true);
-            regDeleteKey = userClass.getDeclaredMethod(
-                    "WindowsRegDeleteKey", new Class[] { int.class,
-                            byte[].class });
+            regDeleteKey   = userClass.getDeclaredMethod("WindowsRegDeleteKey",   new Class[] { int.class, byte[].class });
             regDeleteKey.setAccessible(true);
         }
         catch (Exception e) {
-            throw new RuntimeException(e);
+            e.printStackTrace();
         }
     }
 
@@ -81,20 +77,23 @@ public class WinRegistry {
      * @param hkey   HKEY_CURRENT_USER/HKEY_LOCAL_MACHINE
      * @param key
      * @param valueName
+     * @param wow64  0 for standard registry access (32-bits for 32-bit app, 64-bits for 64-bits app)
+     *               or KEY_WOW64_32KEY to force access to 32-bit registry view,
+     *               or KEY_WOW64_64KEY to force access to 64-bit registry view
      * @return the value
      * @throws IllegalArgumentException
      * @throws IllegalAccessException
      * @throws InvocationTargetException
      */
-    public static String readString(int hkey, String key, String valueName)
+    public static String readString(int hkey, String key, String valueName, int wow64)
             throws IllegalArgumentException, IllegalAccessException,
             InvocationTargetException
     {
         if (hkey == HKEY_LOCAL_MACHINE) {
-            return readString(systemRoot, hkey, key, valueName);
+            return readString(systemRoot, hkey, key, valueName, wow64);
         }
         else if (hkey == HKEY_CURRENT_USER) {
-            return readString(userRoot, hkey, key, valueName);
+            return readString(userRoot, hkey, key, valueName, wow64);
         }
         else {
             throw new IllegalArgumentException("hkey=" + hkey);
@@ -105,20 +104,22 @@ public class WinRegistry {
      * Read value(s) and value name(s) form given key
      * @param hkey  HKEY_CURRENT_USER/HKEY_LOCAL_MACHINE
      * @param key
+     * @param wow64  0 for standard registry access (32-bits for 32-bit app, 64-bits for 64-bits app)
+     *               or KEY_WOW64_32KEY to force access to 32-bit registry view,
+     *               or KEY_WOW64_64KEY to force access to 64-bit registry view
      * @return the value name(s) plus the value(s)
      * @throws IllegalArgumentException
      * @throws IllegalAccessException
      * @throws InvocationTargetException
      */
-    public static Map<String, String> readStringValues(int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    public static Map<String, String> readStringValues(int hkey, String key, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         if (hkey == HKEY_LOCAL_MACHINE) {
-            return readStringValues(systemRoot, hkey, key);
+            return readStringValues(systemRoot, hkey, key, wow64);
         }
         else if (hkey == HKEY_CURRENT_USER) {
-            return readStringValues(userRoot, hkey, key);
+            return readStringValues(userRoot, hkey, key, wow64);
         }
         else {
             throw new IllegalArgumentException("hkey=" + hkey);
@@ -129,20 +130,22 @@ public class WinRegistry {
      * Read the value name(s) from a given key
      * @param hkey  HKEY_CURRENT_USER/HKEY_LOCAL_MACHINE
      * @param key
+     * @param wow64  0 for standard registry access (32-bits for 32-bit app, 64-bits for 64-bits app)
+     *               or KEY_WOW64_32KEY to force access to 32-bit registry view,
+     *               or KEY_WOW64_64KEY to force access to 64-bit registry view
      * @return the value name(s)
      * @throws IllegalArgumentException
      * @throws IllegalAccessException
      * @throws InvocationTargetException
      */
-    public static List<String> readStringSubKeys(int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    public static List<String> readStringSubKeys(int hkey, String key, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         if (hkey == HKEY_LOCAL_MACHINE) {
-            return readStringSubKeys(systemRoot, hkey, key);
+            return readStringSubKeys(systemRoot, hkey, key, wow64);
         }
         else if (hkey == HKEY_CURRENT_USER) {
-            return readStringSubKeys(userRoot, hkey, key);
+            return readStringSubKeys(userRoot, hkey, key, wow64);
         }
         else {
             throw new IllegalArgumentException("hkey=" + hkey);
@@ -158,8 +161,7 @@ public class WinRegistry {
      * @throws InvocationTargetException
      */
     public static void createKey(int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         int [] ret;
         if (hkey == HKEY_LOCAL_MACHINE) {
@@ -184,20 +186,22 @@ public class WinRegistry {
      * @param key
      * @param valueName
      * @param value
+     * @param wow64  0 for standard registry access (32-bits for 32-bit app, 64-bits for 64-bits app)
+     *               or KEY_WOW64_32KEY to force access to 32-bit registry view,
+     *               or KEY_WOW64_64KEY to force access to 64-bit registry view
      * @throws IllegalArgumentException
      * @throws IllegalAccessException
      * @throws InvocationTargetException
      */
     public static void writeStringValue
-    (int hkey, String key, String valueName, String value)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    (int hkey, String key, String valueName, String value, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         if (hkey == HKEY_LOCAL_MACHINE) {
-            writeStringValue(systemRoot, hkey, key, valueName, value);
+            writeStringValue(systemRoot, hkey, key, valueName, value, wow64);
         }
         else if (hkey == HKEY_CURRENT_USER) {
-            writeStringValue(userRoot, hkey, key, valueName, value);
+            writeStringValue(userRoot, hkey, key, valueName, value, wow64);
         }
         else {
             throw new IllegalArgumentException("hkey=" + hkey);
@@ -213,8 +217,7 @@ public class WinRegistry {
      * @throws InvocationTargetException
      */
     public static void deleteKey(int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         int rc = -1;
         if (hkey == HKEY_LOCAL_MACHINE) {
@@ -233,146 +236,150 @@ public class WinRegistry {
      * @param hkey
      * @param key
      * @param value
+     * @param wow64  0 for standard registry access (32-bits for 32-bit app, 64-bits for 64-bits app)
+     *               or KEY_WOW64_32KEY to force access to 32-bit registry view,
+     *               or KEY_WOW64_64KEY to force access to 64-bit registry view
      * @throws IllegalArgumentException
      * @throws IllegalAccessException
      * @throws InvocationTargetException
      */
-    public static void deleteValue(int hkey, String key, String value)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    public static void deleteValue(int hkey, String key, String value, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         int rc = -1;
         if (hkey == HKEY_LOCAL_MACHINE) {
-            rc = deleteValue(systemRoot, hkey, key, value);
+            rc = deleteValue(systemRoot, hkey, key, value, wow64);
         }
         else if (hkey == HKEY_CURRENT_USER) {
-            rc = deleteValue(userRoot, hkey, key, value);
+            rc = deleteValue(userRoot, hkey, key, value, wow64);
         }
         if (rc != REG_SUCCESS) {
             throw new IllegalArgumentException("rc=" + rc + "  key=" + key + "  value=" + value);
         }
     }
 
-    // =====================
-
-    private static int deleteValue
-            (Preferences root, int hkey, String key, String value)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    //========================================================================
+    private static int deleteValue(Preferences root, int hkey, String key, String value, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
-                Integer.valueOf(hkey), toCstr(key), Integer.valueOf(KEY_ALL_ACCESS) });
+                Integer.valueOf(hkey), toCstr(key), new Integer(KEY_ALL_ACCESS | wow64)
+        });
         if (handles[1] != REG_SUCCESS) {
             return handles[1];  // can be REG_NOTFOUND, REG_ACCESSDENIED
         }
-        int rc =((Integer) regDeleteValue.invoke(root,
-                new Object[] {
-                        Integer.valueOf(handles[0]), toCstr(value)
-                })).intValue();
-        regCloseKey.invoke(root, new Object[] { Integer.valueOf(handles[0]) });
+        int rc =((Integer) regDeleteValue.invoke(root, new Object[] {
+                new Integer(handles[0]), toCstr(value)
+        })).intValue();
+        regCloseKey.invoke(root, new Object[] { new Integer(handles[0]) });
         return rc;
     }
 
+    //========================================================================
     private static int deleteKey(Preferences root, int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
-        int rc =((Integer) regDeleteKey.invoke(root,
-                new Object[] { Integer.valueOf(hkey), toCstr(key) })).intValue();
+        int rc =((Integer) regDeleteKey.invoke(root, new Object[] {
+                new Integer(hkey), toCstr(key)
+        })).intValue();
         return rc;  // can REG_NOTFOUND, REG_ACCESSDENIED, REG_SUCCESS
     }
 
-    private static String readString(Preferences root, int hkey, String key, String value)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    //========================================================================
+    private static String readString(Preferences root, int hkey, String key, String value, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
-                Integer.valueOf(hkey), toCstr(key), Integer.valueOf(KEY_READ) });
-        if (handles[1] != REG_SUCCESS) {
-            return null;
-        }
-        byte[] valb = (byte[]) regQueryValueEx.invoke(root, new Object[] {
-                Integer.valueOf(handles[0]), toCstr(value) });
-        regCloseKey.invoke(root, new Object[] { Integer.valueOf(handles[0]) });
-        return (valb != null ? new String(valb).trim() : null);
-    }
-
-    private static Map<String,String> readStringValues
-            (Preferences root, int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
-    {
-        HashMap<String, String> results = new HashMap<String,String>();
-        int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
-                Integer.valueOf(hkey), toCstr(key), Integer.valueOf(KEY_READ) });
-        if (handles[1] != REG_SUCCESS) {
-            return null;
-        }
-        int[] info = (int[]) regQueryInfoKey.invoke(root,
-                new Object[] { Integer.valueOf(handles[0]) });
-
-        int count = info[0]; // count
-        int maxlen = info[3]; // value length max
-        for(int index=0; index<count; index++)  {
-            byte[] name = (byte[]) regEnumValue.invoke(root, new Object[] {
-                    Integer.valueOf(handles[0]), Integer.valueOf(index), Integer.valueOf(maxlen + 1)});
-            String value = readString(hkey, key, new String(name));
-            results.put(new String(name).trim(), value);
-        }
-        regCloseKey.invoke(root, new Object[] { Integer.valueOf(handles[0]) });
-        return results;
-    }
-
-    private static List<String> readStringSubKeys
-            (Preferences root, int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
-    {
-        List<String> results = new ArrayList<String>();
-        int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
-                Integer.valueOf(hkey), toCstr(key), Integer.valueOf(KEY_READ)
+                new Integer(hkey), toCstr(key), new Integer(KEY_READ | wow64)
         });
         if (handles[1] != REG_SUCCESS) {
             return null;
         }
-        int[] info = (int[]) regQueryInfoKey.invoke(root,
-                new Object[] { Integer.valueOf(handles[0]) });
+        byte[] valb = (byte[]) regQueryValueEx.invoke(root, new Object[] {
+                new Integer(handles[0]), toCstr(value)
+        });
+        regCloseKey.invoke(root, new Object[] { new Integer(handles[0]) });
+        return (valb != null ? new String(valb).trim() : null);
+    }
+
+    //========================================================================
+    private static Map<String,String> readStringValues(Preferences root, int hkey, String key, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
+    {
+        HashMap<String, String> results = new HashMap<String,String>();
+        int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
+                new Integer(hkey), toCstr(key), new Integer(KEY_READ | wow64)
+        });
+        if (handles[1] != REG_SUCCESS) {
+            return null;
+        }
+        int[] info = (int[]) regQueryInfoKey.invoke(root, new Object[] {
+                new Integer(handles[0])
+        });
+
+        int count  = info[2]; // count
+        int maxlen = info[3]; // value length max
+        for(int index=0; index<count; index++)  {
+            byte[] name = (byte[]) regEnumValue.invoke(root, new Object[] {
+                    new Integer(handles[0]), new Integer(index), new Integer(maxlen + 1)
+            });
+            String value = readString(hkey, key, new String(name), wow64);
+            results.put(new String(name).trim(), value);
+        }
+        regCloseKey.invoke(root, new Object[] { new Integer(handles[0]) });
+        return results;
+    }
+
+    //========================================================================
+    private static List<String> readStringSubKeys(Preferences root, int hkey, String key, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
+    {
+        List<String> results = new ArrayList<String>();
+        int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
+                new Integer(hkey), toCstr(key), new Integer(KEY_READ | wow64)
+        });
+        if (handles[1] != REG_SUCCESS) {
+            return null;
+        }
+        int[] info = (int[]) regQueryInfoKey.invoke(root, new Object[] {
+                new Integer(handles[0])
+        });
 
         int count  = info[0]; // Fix: info[2] was being used here with wrong results. Suggested by davenpcj, confirmed by Petrucio
         int maxlen = info[3]; // value length max
         for(int index=0; index<count; index++)  {
             byte[] name = (byte[]) regEnumKeyEx.invoke(root, new Object[] {
-                    Integer.valueOf(handles[0]), Integer.valueOf(index), Integer.valueOf(maxlen + 1)
+                    new Integer(handles[0]), new Integer(index), new Integer(maxlen + 1)
             });
             results.add(new String(name).trim());
         }
-        regCloseKey.invoke(root, new Object[] { Integer.valueOf(handles[0]) });
+        regCloseKey.invoke(root, new Object[] { new Integer(handles[0]) });
         return results;
     }
 
+    //========================================================================
     private static int [] createKey(Preferences root, int hkey, String key)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
-        return  (int[]) regCreateKeyEx.invoke(root,
-                new Object[] { Integer.valueOf(hkey), toCstr(key) });
+        return (int[]) regCreateKeyEx.invoke(root, new Object[] {
+                new Integer(hkey), toCstr(key)
+        });
     }
 
-    private static void writeStringValue
-            (Preferences root, int hkey, String key, String valueName, String value)
-            throws IllegalArgumentException, IllegalAccessException,
-            InvocationTargetException
+    //========================================================================
+    private static void writeStringValue(Preferences root, int hkey, String key, String valueName, String value, int wow64)
+            throws IllegalArgumentException, IllegalAccessException, InvocationTargetException
     {
         int[] handles = (int[]) regOpenKey.invoke(root, new Object[] {
-                Integer.valueOf(hkey), toCstr(key), Integer.valueOf(KEY_ALL_ACCESS) });
-
-        regSetValueEx.invoke(root,
-                new Object[] {
-                        Integer.valueOf(handles[0]), toCstr(valueName), toCstr(value)
-                });
-        regCloseKey.invoke(root, new Object[] { Integer.valueOf(handles[0]) });
+                new Integer(hkey), toCstr(key), new Integer(KEY_ALL_ACCESS | wow64)
+        });
+        regSetValueEx.invoke(root, new Object[] {
+                new Integer(handles[0]), toCstr(valueName), toCstr(value)
+        });
+        regCloseKey.invoke(root, new Object[] { new Integer(handles[0]) });
     }
 
+    //========================================================================
     // utility
     private static byte[] toCstr(String str) {
         byte[] result = new byte[str.length() + 1];
